5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4471/executions/1662_2967.log
== TEST (2019-04-15 15:08:26) 
-- CODE:
ma=(x)
aa=(y)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ma=(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:08:51) 
-- CODE:
ma=(x)
aa=(y)
print(y(x))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    ma=(x)
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 15:09:06) 
-- CODE:
ma=(x)
aa=(y)
print(float(y(x))
-- ERROR:
File "XXXX", line 4
    
                     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
